@@ -1,3 +1,9 @@
+ags (0.7.122.24)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed NULL input
+	* fixed non-interleaved Lv2 audio data
+
 ags (0.7.122.23)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
